# multiserver-download

./: README.md  pyproject.toml  servers.example.toml
docs/: usage-guide.md
src/msdl/: __init__.py  cli.py  config.py  hf.py  models.py  planner.py  progress.py  ssh.py
tests/: test_cli.py  test_config.py  test_hf_paths.py  test_planner.py  test_progress.py  test_ssh.py
