[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multiserver-download"
version = "0.1.0"
description = "Download Hugging Face models through multiple SSH workers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "huggingface_hub>=0.23.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[project.scripts]
msdl = "msdl.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
